# glados

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  start.sh  streamlit.py  tsconfig.json  tsup.config.ts
.github/workflows/: deploy.yml  manage.yml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql
glados/: __init__.py  assistant.py  session.py
glados/backend/: db.py  llm.py  persistent.py  util.py
glados/client/: __init__.py  discord.py
glados/client/slack/: bot.py  manifest.json
glados/client/slack/formatter/: __init__.py  block.py
glados/client/streamlit/: app.py
glados/tool/: __init__.py  _retrieval.py  date.py  file.py  image.py  retrieval.py  samples.py  summarize.py  weather.py  web.py
glados/util/: __init__.py  file.py  langchain.py
ipny/: __init__.py  assistant.py  session.py
ipny/backend/: db.py
ipny/client/slack/: __init__.py  bot.py
ipny/client/slack/formatter/: __init__.py  block.py
ipny/tool/: __init__.py  _ad_commentator.py  date.py  image.py
ipny/util/: __init__.py  file.py
k8s/: configmap.yaml  deployment.yaml  secret.yaml
src/: app.ts  assistant.ts
src/blocks/: index.ts
src/funcs/: chat.ts  image.ts
src/glados/: blocks.ts  index.ts  types.ts
src/glados/plugins/chatgpt/: handlers.ts  index.ts  session.ts
src/glados/plugins/dalle/: handlers.ts  (+1 more)
src/glados/utils/: edgedb.ts  openai.ts
test/: conftest.py  functions.test.ts  test_db.py  test_langchain.py  test_search_document.py  test_slack_formatter.py  test_text_loader.py  test_tools.py
(+5 files in other folders)
