[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ipny"
requires-python = ">=3.10"
authors = [{ email = "comfuture@iplateia.com", name = "Changkyun Kim" }]
dynamic = ["version", "description"]

dependencies = [
  "aiohttp>=3.9.3",
  "boto3>=1.28.83",
  "click>=8.1.7",
  "python-dotenv>=1.0.1",
  "function-schema>=0.2.0",
  "motor>=3.3.2",
  "openai>=1.23.6",
  "pytz>=2024.1",
  "slack-cli-hooks",
  "slack-bolt>=1.19.0rc1",
  "tiktoken>=0.5.2",
  "websockets>=12.0",
]

[project.optional-dependencies]
test = [
  "httpx >= 0.25.0",
  "pytest >= 7.4.4",
  "pytest-asyncio == 0.23.3",
  "Faker >=13.13.0",
]

[project.urls]
Repository = "https://github.com/iplateia/ipny"
