[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "glados"
requires-python = ">=3.10"
authors = [{ email = "comfuture@gmail.com", name = "Changkyun Kim" }]
dynamic = ["version", "description"]

dependencies = [
  "boto3>=1.28.83",
  "click>=8.1.7",
  "discord.py>=2.3.2",
  "python-dotenv>=1.0.1",
  "function-schema>=0.2.0",
  "motor>=3.3.2",
  "openai>=1.25.0",
  "openparse>=0.5.2",
  "slack-bolt>=1.18.0",
  "streamlit>=1.29.0",
  "tiktoken>=0.5.2",
  "trafilatura>=1.6.3",
  "websockets>=12.0",
]

[project.optional-dependencies]
test = [
  "httpx >= 0.25.0",
  "pytest >= 7.4.4",
  "pytest-asyncio == 0.23.3",
  "Faker >=13.13.0",
]

[project.urls]
Repository = "https://github.com/comfuture/glados"
